--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Oswald:wght@700&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Oswald:wght@700&display=swap"
     rel="stylesheet">
   <title>
     <%= htmlWebpackPlugin.options.title %>
